@@ -129,8 +129,8 @@ namespace DNPreBuild.Core.Nodes
 
         public override void Parse(XmlNode node)
         {
-            string path = Helper.AttributeValue(node, "path", null);
-            string pattern = Helper.AttributeValue(node, "pattern", null);
+            string path = Helper.AttributeValue(node, "path", ".");
+            string pattern = Helper.AttributeValue(node, "pattern", "*");
             bool recurse = (bool)Helper.TranslateValue(typeof(bool), Helper.AttributeValue(node, "recurse", "false"));
             bool useRegex = (bool)Helper.TranslateValue(typeof(bool), Helper.AttributeValue(node, "useRegex", "false"));
 
