@@ -124,7 +124,7 @@
 
 	<xs:element name="Options">
 		<xs:complexType>
-			<xs:sequence>
+			<xs:all>
 				<xs:element name="CompilerDefines" type="xs:string" minOccurs="0" />
 				<xs:element name="OptimizeCode" type="xs:boolean" minOccurs="0" />
 				<xs:element name="CheckUnderflowOverflow" type="xs:boolean" minOccurs="0" />
@@ -147,7 +147,7 @@
 				<xs:element name="BaseAddress" type="xs:string" minOccurs="0" />
 				<xs:element name="FileAlignment" type="xs:integer" minOccurs="0" />
 				<xs:element name="NoStdLib" type="xs:boolean" minOccurs="0" />				
-			</xs:sequence> 
+			</xs:all> 
 		</xs:complexType>
 	</xs:element>
 
