@@ -3,9 +3,16 @@
 + = Addition
 ! = Bug Fix
 
-[ July 26, 2004 - 0.11.4 ]
+[ July 27, 2004 - 0.11.4 ]
     + Added 'useRegex' attribute to the Match tag. Matches can now use regular
       expressions to match filenames.
+    + Added the 'assemblyName' attribute to the Project tag. Projects can now
+      set their output assembly name.
+    ! Fixed several bugs in the way that Project tags inheirt their parent
+      Solutions configuration options. This operation should now work fully as
+      intended.
+    ! Due to some wierdness, Project Guid's are now stored as part of the Project
+      node and created at parse time.
 
 [ May 11, 2004 - 0.11.3 ]
     ! Fixed a bug where I was writing the wrong property name for a projects root
